@@ -7,6 +7,7 @@
 /.env
 .env.backup
 .env.production
+*.env.json
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
