@@ -6,6 +6,7 @@ use App\Modules\Approval\Api\Events\EntityApproved;
 use App\Modules\Invoices\Application\InvoicesFacadeInterface;
 use App\Modules\Invoices\Domain\Entities\Invoice;
 use Illuminate\Support\Facades\Log;
+use InvalidArgumentException;
 
 readonly class InvoiceApprovedListener
 {
@@ -24,7 +25,7 @@ readonly class InvoiceApprovedListener
     private function validate(EntityApproved $event): bool
     {
         if (!class_exists($event->approvalDto->entity)) {
-            throw new \InvalidArgumentException('Invalid entity class');
+            throw new InvalidArgumentException('Invalid entity class');
         }
         if ($event->approvalDto->entity !== Invoice::class) {
             return false;
