@@ -6,6 +6,7 @@ use App\Modules\Approval\Api\Events\EntityRejected;
 use App\Modules\Invoices\Application\InvoicesFacadeInterface;
 use App\Modules\Invoices\Domain\Entities\Invoice;
 use Illuminate\Support\Facades\Log;
+use InvalidArgumentException;
 
 readonly class InvoiceRejectedListener
 {
@@ -24,7 +25,7 @@ readonly class InvoiceRejectedListener
         private function validate(EntityRejected $event): bool
     {
         if (!class_exists($event->approvalDto->entity)) {
-            throw new \InvalidArgumentException('Invalid entity class');
+            throw new InvalidArgumentException('Invalid entity class');
         }
         if (!is_subclass_of($event->approvalDto->entity, Invoice::class)) {
             return false;
